--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,10 @@ border: 1px solid rgba(255, 255, 255, 0.32);
   opacity: 1;
 }
 
+.addTransaction{
+  /* position: absolute; */
+}
+
 .transaction-section{
   height: 15rem;
   max-height: 20rem;
